# polaris-autonomous-system

./: .gitignore  CHANGELOG.md  COMPLETED.md  CONTRIBUTING.md  FINAL_SUMMARY.md  GITHUB_PREP.md  LICENSE  ORGANIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  REORGANIZATION_COMPLETE.md  SETUP_GUIDE.md  STATUS.txt  cleanup_for_github.sh  main.py  package.xml  requirements.txt  setup.py  test_imports.py
.github/workflows/: tests.yml
data/: README.md  __init__.py
data/processed/: localization_training_data_metadata.yaml
data/raw/CAST/collect5/: metadata.yaml
data/raw/CAST/follow5.1/: metadata.yaml
data/raw/CAST/follow5.2/: metadata.yaml
data/scripts/: bag_extractor_old.py
docs/: fpga_implementation_guide.md  ml_localization_guide.md
docs/images/: README.md
ekf_localization/: ALGORITHM_DESIGN.md  README.md  TEST_REPORT.md  VALIDATION_GUIDE.md  VALIDATION_SUMMARY.md  __init__.py  config.yaml
ml/: ML_GETTING_STARTED.md  QUICK_REFERENCE.md  README.md  __init__.py  compare_ekf_ml.py  ml_localization_training.ipynb  model.py  setup_ml_environment.py
polaris_autonomous_system/: __init__.py
polaris_autonomous_system/data_processing/: __init__.py
polaris_autonomous_system/localization/: __init__.py  ekf_localization.py  localization_preprocessor.py
polaris_autonomous_system/ml_pipeline/: __init__.py  ml_localization.py
scripts/: diagnose_ekf_issues.py  read_ros2_bag.py  test_localization_pipeline.py  validate_ekf.py
tests/: __init__.py  ekf_validation_framework.py  test_ekf_components.py  unit_tests.py  validation_framework.py
tests_utils/: test_full_system.py  validate_structure.py
